# C-Chess-Engine

./: Board.cpp  Board.h  Book.h  Bot.cpp  Bot.h  CMakeLists.txt  README.md  Search.cpp  Search.h  Test.cpp  Test.h  Transposition.cpp  Transposition.h  Zobrist.cpp  Zobrist.h  bitUtils.cpp  bitUtils.h  evaluation.cpp  evaluation.h  gamestate.cpp  gamestate.h  gui.cpp  gui.h  main.cpp  move.cpp  move.h  movegen.cpp  movegen.h
GUI/: Button.cpp  Button.h  gui.cpp  gui.h
